Envio atividade hexagonal